feat: Implement findAll method in SurveyEditionService
- Added findAll method to retrieve all SurveyEditions.
- Maps the list of SurveyEdition entities to SurveyEditionDto using the SurveyEditionMapper.